public/css/index.css
.main-content {
}

.control-panel {
    float: left;
    padding-left: 20px;
    padding-bottom: 70px;
    width: 35%;
    height: calc(100% - 2px);
    display: table;
}

.map-panel {
    float: right;
    padding-left: 20px;
    padding-right: 20px;
    width: 65%;
}

.indented {
    margin-left: 20px;
}

.vert-break {
    margin-top: 25px;
}

.big-vert-break {
    margin-top: 50px;
}

#map-canvas {
    height: calc(100% - 70px);
}

.slider-panel {
    width: 100%;
}

div.info-panel>p {
    text-align: justify;
}

.area-subtitle {
    margin-top: -8px;
    color: grey;
    font-style: italic;
}

body {
    padding-bottom: 70px;
}

.float-bottom {
    display: table-row;
    vertical-align: bottom;
    height: 1px;
}

.area-name {
    text-transform: capitalize;
}

